tests/paczka1/small_fuzzy/90476639.err
Error in line 2: S754 S637 42,0
Error in line 7: DfK3b S439 93,1
